k8s/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-ride-deployment
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-ride
  template:
    metadata:
      labels:
        app: ms-ride
    spec:
      containers:
        - image: gh6987/rso:ms-ride-2024-01-09-01-33-18 #to be changed
          name: ms-ride
          ports:
            - containerPort: 8080
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: ms-ride
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: ms-ride
