k8s/ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ms-ride(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-ride
                port:
                  number: 8080
#          - path: /comments(/|$)(.*)
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: comments
#                port:
#                  number: 8081
